[package]
name = "echor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"

[dev-dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
clippy = "0.0.302"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
